--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@reach/router": "^1.3.4",
     "@stripe/stripe-js": "^1.15.1",
     "babel-plugin-styled-components": "^1.13.1",
     "dotenv": "^10.0.0",
+    "firebase": "^8.7.1",
     "gatsby": "^3.8.1",
+    "gatsby-plugin-firebase": "^0.2.0-beta.4",
     "gatsby-plugin-image": "^1.9.0",
     "gatsby-plugin-manifest": "^3.9.0",
     "gatsby-plugin-react-helmet": "^4.9.0",
