--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reach/router": "^1.3.4",
     "@stripe/stripe-js": "^1.15.1",
     "babel-plugin-styled-components": "^1.13.1",
+    "browser-monads": "^1.0.0",
     "dotenv": "^10.0.0",
     "firebase": "^8.7.1",
     "gatsby": "^3.8.1",
